# Linq-Python

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  api.md  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml
scripts/: bootstrap  format  lint  test
src/linq/: __init__.py  _http.py  _pagination.py  _request_options.py  _version.py  client.py  errors.py
src/linq/services/: __init__.py  attachments.py  capability.py  chats.py  messages.py  numbers.py  webhook_events.py  webhook_subscriptions.py  webhooks.py
tests/: test_client_runtime.py  test_services_and_pagination.py
