[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "linq-python"
description = "Linq API V3 Python SDK"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Linq" }]
dependencies = ["httpx>=0.27.0,<1"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/dharmateja03/Linq-Python"
Repository = "https://github.com/dharmateja03/Linq-Python"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.11.0",
]

[tool.hatch.version]
path = "src/linq/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/linq"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
